--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
         th .sort-indicator { position: absolute; right: 10px; top: 50%; transform: translateY(-50%); opacity: 0.6; }
         tbody tr:hover { background-color: var(--bg-tertiary); }
 
-        /* Corrección para texto largo en tablas */
         td {
             white-space: normal;
             word-break: break-word;
@@ -126,14 +125,9 @@
         .modal-content .full-width { grid-column: 1 / -1; }
         #modal-obs-planificacion { display: block; white-space: pre-wrap; background-color: var(--bg-primary); padding: 0.5rem; border-radius: 6px; margin-top: 0.5rem; max-height: 150px; overflow-y: auto; font-style: italic; }
 
-        /* --- CÓDIGO DE COMPATIBILIDAD (RESPONSIVE DESIGN) --- */
         @media (max-width: 992px) {
-            .filtros-grid {
-                grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-            }
-            .table-container {
-                -webkit-overflow-scrolling: touch;
-            }
+            .filtros-grid { grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); }
+            .table-container { -webkit-overflow-scrolling: touch; }
         }
         @media (max-width: 768px) {
             .container { padding: 1rem; }
@@ -146,7 +140,6 @@
             .header-controls { flex-direction: column; gap: 1rem; align-items: flex-start; }
             .action-buttons { width: 100%; justify-content: space-between; }
         }
-
     </style>
 </head>
 <body>
@@ -222,8 +215,8 @@
                             <th data-sort="numNV">Nº NV<span class="sort-indicator"></span></th>
                             <th data-sort="cliente">Cliente<span class="sort-indicator"></span></th>
                             <th data-sort="vendedor">Vendedor<span class="sort-indicator"></span></th>
-                            <th data-sort="tieneRepuestos">Rep.</th>
-                            <th data-sort="repuestosDespachados">Rep. Desp.</th>
+                            <th data-sort="tieneRepuestos">Rep.<span class="sort-indicator"></span></th>
+                            <th data-sort="repuestosDespachados">Rep. Desp.<span class="sort-indicator"></span></th>
                             <th data-sort="timestamp">Últ. Mod.<span class="sort-indicator"></span></th>
                             <th data-sort="estado">Estado<span class="sort-indicator"></span></th>
                             <th>Acciones</th>
@@ -363,6 +356,7 @@
                 let valA = a[column], valB = b[column];
                 if (column === 'timestamp') { valA = a.fechaEdicion || a.timestamp; valB = b.fechaEdicion || b.timestamp; }
                 if (valA?.toDate) valA = valA.toDate(); if (valB?.toDate) valB = valB.toDate();
+                if (!valA) return 1; if (!valB) return -1;
                 if (valA < valB) return direction === 'asc' ? 1 : -1;
                 if (valA > valB) return direction === 'asc' ? -1 : 1;
                 return 0;
@@ -422,7 +416,9 @@
         function updateSortIndicators() {
             ui.headers.forEach(header => {
                 const indicator = header.querySelector('.sort-indicator');
-                indicator.textContent = header.dataset.sort === state.sortConfig.column ? (state.sortConfig.direction === 'asc' ? '▲' : '▼') : '';
+                if (indicator) { // Comprobación para evitar errores
+                    indicator.textContent = header.dataset.sort === state.sortConfig.column ? (state.sortConfig.direction === 'asc' ? '▲' : '▼') : '';
+                }
             });
         }
         
@@ -485,6 +481,7 @@
             ui.filters.btnClear.addEventListener('click', () => { Object.values(ui.filters).forEach(el => { if(el.tagName !== 'BUTTON') el.value = ''; }); applyFiltersAndRender(); });
             ui.headers.forEach(header => header.addEventListener('click', () => {
                 const newColumn = header.dataset.sort;
+                if (!newColumn) return;
                 state.sortConfig.direction = (state.sortConfig.column === newColumn && state.sortConfig.direction === 'desc') ? 'asc' : 'desc';
                 state.sortConfig.column = newColumn;
                 applyFiltersAndRender();
